packages/tree-sitter-holoscript/grammar.js
    source_file: ($) => repeat($._definition),

    _definition: ($) =>
      choice(
        // Core scene formats
        $.composition,
        $.world,
        $.template,
        $.object,
        $.entity,
        $.environment,
        // HSPlus language constructs
        $.module_declaration,
        $.struct_definition,
        $.enum_definition,
        $.interface_definition,
        $.import_statement,
        $.export_statement,
        $.function_declaration,
        // Spatial computing primitives
        $.zone_declaration,
        $.spawn_group,
        $.waypoints_block,
        $.constraint_block,
        $.terrain_block,
        // Domain-specific blocks (structured for AI training)
        $.iot_block,
        $.robotics_block,
        $.dataviz_block,
        $.education_block,
        $.healthcare_block,
        $.music_block,
        $.architecture_block,
        $.web3_block,
        // v6 Universal Semantic Platform (v5.2 — March 2026)
        $.service_block,
        $.contract_block,
        $.data_block,
        $.pipeline_block,
        // Perception & simulation layer (v4.2 — March 2026)
        $.material_block,
        $.particle_block,
        $.post_processing_block,
        $.weather_block,
        $.procedural_block,
        $.lod_block,
        $.navigation_block,
        $.input_block,
        $.audio_source_block,
        $.force_field_block,
        $.articulation_block,
        $.render_hints,
        $.annotation,
        // Built-in test framework
        $.test_block,
        // Codebase absorption (v4.3)
        $.codebase_block,
        // Shared constructs
        $.action,
        $.event_bus,
        $.trait_definition,
        $.timeline,
        $.state_declaration,
        // Cultural norms (v4.6 — emergent agent culture)
        $.norm_block,
        // Linear resource types (v4.4 — compile-time safety)
        $.resource_definition,
        // Extensible: any unknown domain block
        $.custom_block,
        // Additional top-level spatial constructs
        $.spatial_group,
        $.light,
        $.camera
      ),

    // =========================================================================
    // COMPOSITION (Primary .holo format)
    // =========================================================================

    object: ($) =>
      seq(
        optional($.platform_decorator),
        choice(
          'object',
          'orb',
          'cube',
          'sphere',
          'cylinder',
          'cone',
          'model',
          'npc',
          'portal',
          'audio',
          'spawnpoint',
          'ui_panel',
          'text',
          'gesture',
          'progress',
          'button',
          'text'
        ),
        field('name', $.string),
        optional(seq('using', field('template', $.string))),
        optional($.trait_list),
        optional(seq('{', repeat($._object_content), '}'))
      ),

    _object_content: ($) =>
      choice(
        $.property,
        $.trait_inline,
        $.trait_with_body,
        $.object,
        $.state_block,
        $.networked_block,
        $.physics_block,
        // Structured physics sub-blocks can also appear directly in objects
        $.collider_block,
        $.rigidbody_block,
        $.force_field_block,
        $.articulation_block,
        $.animation,
        $.event_handler,
        $.action,
        $.decorator_event_handler,
        // Compile-time safety annotations
        $.effects_decorator,
        $.budget_decorator
      ),

    // =========================================================================
    // ENTITY (Alternative object syntax)
    // =========================================================================

    trait_list: ($) => prec.right(repeat1($.trait_inline)),

    trait_inline: ($) => seq('@', field('name', $.identifier), optional($.trait_arguments)),

    trait_definition: ($) =>
      seq(
        'trait',
        field('name', $.identifier),
        optional(seq('extends', field('base', $.identifier))),
        '{',
        repeat($._trait_content),
        '}'
      ),

    _trait_content: ($) => choice($.property, $.event_handler, $.action),

    // Structured trait with properties — @agent { type: "player", capabilities: [...] }
    iot_block: ($) =>
      seq(
        choice(
          'sensor',
          'device',
          'binding',
          'telemetry_stream',
          'digital_twin',
          'data_binding',
          'mqtt_source',
          'mqtt_sink',
          'wot_thing'
        ),
        field('name', choice($.string, $.identifier)),
        optional($.trait_list),
        '{',
        repeat(choice(seq($.property, optional(',')), $.event_handler, $.object)),
        '}'
      ),

    // ── Robotics ─────────────────────────────────────────────────────────────
    // joint "Shoulder" { type: "revolute" axis: [0,1,0] limits: [-90,90] }
    // actuator "GripperServo" { type: "servo" torque: 5.0 }
    education_block: ($) =>
      seq(
        choice(
          'lesson',
          'quiz',
          'curriculum',
          'course',
          'assessment',
          'flashcard',
          'tutorial',
          'lab_experiment',
          'exercise'
        ),
        field('name', choice($.string, $.identifier)),
        optional($.trait_list),
        '{',
        repeat(choice(seq($.property, optional(',')), $.object)),
        '}'
      ),

    // ── Healthcare / Medical ─────────────────────────────────────────────────
    // procedure "Catheterization" { steps: [...] precision_required: 0.9 }
    // patient_model "Heart" { anatomy: "cardiac" layers: [...] }
    web3_block: ($) =>
      seq(
        choice(
          'contract',
          'token',
          'wallet',
          'marketplace',
          'auction',
          'royalty_split',
          'governance',
          'staking_pool',
          'bridge'
        ),
        field('name', choice($.string, $.identifier)),
        optional($.trait_list),
        '{',
        repeat(choice(seq($.property, optional(',')), $.object)),
        '}'
      ),

    // =========================================================================
    // v6 UNIVERSAL SEMANTIC PLATFORM (v5.2 — March 2026)
    // Backend services, API contracts, data models, pipelines — traits for
    // everything beyond spatial/agent domains. Enables full-stack from .holo.
    // =========================================================================

    // ── Service & API ──────────────────────────────────────────────────────────
    // service "UserAPI" { port: 3000 base_path: "/api/v1" }
    // endpoint "ListUsers" { method: "GET" path: "/users" handler: "listUsers" }
    // middleware "Auth" { type: "jwt" strategy: "bearer" }
    service_block: ($) =>
      seq(
        choice(
          'service',
          'endpoint',
          'route',
          'handler',
          'middleware',
          'gateway',
          'proxy',
          'load_balancer'
        ),
        field('name', choice($.string, $.identifier)),
        optional($.trait_list),
        '{',
        repeat(choice(seq($.property, optional(',')), $.event_handler, $.object)),
        '}'
      ),

    // ── Contract & Schema ──────────────────────────────────────────────────────
    // schema "User" { fields: { id: "uuid", name: "string" } required: ["id"] }
    // validator "UserInput" { target: "User" rules: { email: "required|email" } }
    contract_block: ($) =>
      seq(
        choice(
          'schema',
          'validator',
          'serializer',
          'openapi',
          'asyncapi',
          'protobuf',
          'graphql_schema'
        ),
        field('name', choice($.string, $.identifier)),
        optional($.trait_list),
        '{',
        repeat(choice(seq($.property, optional(',')), $.object)),
        '}'
      ),

    // ── Data & Storage ─────────────────────────────────────────────────────────
    // data_model "User" { table: "users" fields: { id: "uuid:pk", name: "string" } }
    // migration "001_create_users" { action: "create_table" table: "users" }
    // cache "UserCache" { strategy: "lru" max_size: 1000 ttl: 300 }
    data_block: ($) =>
      seq(
        choice(
          'data_model',
          'migration',
          'seed',
          'data_view',
          'data_index',
          'stored_procedure',
          'data_trigger'
        ),
        field('name', choice($.string, $.identifier)),
        optional($.trait_list),
        '{',
        repeat(choice(seq($.property, optional(',')), $.object)),
        '}'
      ),

    // ── Pipeline & Messaging ───────────────────────────────────────────────────
    // pipeline "EventIngestion" { stages: ["validate", "transform", "store"] }
    // queue "EmailQueue" { backend: "redis" max_retries: 3 }
    // scheduler "Cleanup" { cron: "0 2 * * *" timezone: "UTC" }
    pipeline_block: ($) =>
      seq(
        choice(
          'pipeline',
          'stage',
          'queue',
          'worker',
          'scheduler',
          'consumer',
          'producer',
          'dead_letter'
        ),
        field('name', choice($.string, $.identifier)),
        optional($.trait_list),
        '{',
        repeat(choice(seq($.property, optional(',')), $.event_handler, $.object)),
        '}'
      ),

    // =========================================================================
    // CODEBASE ABSORPTION (v4.3 — March 2026)
    // Spatial code intelligence: absorb any repo into navigable knowledge graph
    // codebase "MyProject" { source: "./src" language: "typescript" }
    // module_map "Architecture" { layout: "layered" group_by: "directory" }
    // =========================================================================

    event_handler: ($) => seq(field('event', $.event_name), optional(':'), $.block),

    property: ($) => seq(field('key', $.property_key), ':', field('value', $._expression)),

    // =========================================================================
    // BLOCKS & STATEMENTS
    // =========================================================================

    block: ($) => prec(1, seq('{', repeat($._statement), '}')),

    _statement: ($) =>
      choice(
        $.variable_declaration_stmt,
        $.assignment,
        $.function_call,
        $.if_statement,
        $.switch_statement,
        $.for_loop,
        $.for_of_loop,
        $.while_loop,
        $.return_statement,
        $.emit_statement,
        $.throw_statement,
        $.try_statement,
        $.expression_statement
      ),

    function_call: ($) =>
      prec(
        1,
        seq(
          field('function', choice($.identifier, $.property_access)),
          '(',
          sepBy($.argument, ','),
          ')'
        )
      ),

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.ternary_expression,
        $.function_call,
        $.property_access,
        $.optional_chain,
        $.subscript,
        $.parenthesized,
        $.await_expression,
        $.new_expression,
        $._value
      ),

    // Await expression — await moveTo(pos)
    number: ($) => token(choice(/\d+\.?\d*([eE][+-]?\d+)?/, /\.\d+([eE][+-]?\d+)?/)),

    string: ($) => choice(seq('"', /[^"]*/, '"'), seq("'", /[^']*/, "'"), seq('`', /[^`]*/, '`')),

    boolean: ($) => choice('true', 'false'),

    array: ($) => seq('[', sepByTrailing($._expression, ','), ']'),

    // Object literals allow comma-optional properties (matching HoloScript convention)
    argument: ($) => choice($._expression, $.named_argument),

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
